--- a/web course/practice2.html
+++ b/web course/practice2.html
@@ -1,27 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<script src="angular.min.js" type="text/javascript"></script>
-	<script src="app.js" type="text/javascript"></script>
-	<title>
-		Name Caluclator
-	</title>
-</head>
-<body ng-app="myFirstApp">
-<h2>Name Caluclator</h2>
-<div ng-controller="myFirstController">
-	<div>
-		enter ur name: <input type="text" ng-model="name">
-	</div>
-	<div>
-			the value of ur {{name}} is: {{total_value}}
-		</div>
-
-</div>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html ng-app="myFirstApp">
   <head>
@@ -34,9 +10,7 @@
     <h1>My first AngularJS App</h1>
     <div ng-controller="MyFirstController">
       <input type="text" ng-model="name">
-      Inside my input is: {{name}}<br>
-      {{sayHello()}}
+      Inside my input is: {{name}}
     </div>
-
   </body>
 </html>
