--- a/solutions/assignmet3-solution/index.html
+++ b/solutions/assignmet3-solution/index.html
@@ -19,7 +19,7 @@
       <div class='output'>
         {{menu.errorMessage}}
         <ol>
-          <display-menu items="menu.found" remove="menu.remove(index)"></display-menu>
+          <display-menu items="menu.found" remove="menu.remove(index)" message="menu.errorMessage"></display-menu>
         </ol>      
       </div>
     </div>
