--- a/solutions/assignmet3-solution/display.html
+++ b/solutions/assignmet3-solution/display.html
@@ -4,4 +4,4 @@ Item-short_name:<span>{{item.short_name}}</span><br>
 Item-description:<span>{{item.description}}</span><br>
 <button ng-click=menu.remove({index:$index})>Remove This Item</button>
 </li>
-<div id="error" ng-if='menu.message!=""'>{{menu.message}}</div>
+<div id="error" ng-if='menu.items.length==0'>No Results were found for the entered text!!!</div>
