--- a/solutions/assignmet3-solution/display.html
+++ b/solutions/assignmet3-solution/display.html
@@ -1,7 +1,8 @@
-<li ng-repeat='item in menu.items'>
+<li ng-repeat='item in menu.items' ng-if='menu.items[0].name!=undefined'>
 Item-name:<span>{{item.name}}</span><br>
 Item-short_name:<span>{{item.short_name}}</span><br>
 Item-description:<span>{{item.description}}</span><br>
 <button ng-click=menu.remove({index:$index})>Remove This Item</button>
 </li>
+<br><br>
 <div id="error" ng-if='menu.items.length==0'>No Results were found for the entered text!!!</div>
