--- a/solutions/assignment4-solution/index.html
+++ b/solutions/assignment4-solution/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en' ng-app='MenuApp'>
+<html  ng-app='MenuApp'>
 <head>
 	<title>Assignment4</title>
 	<meta charset="utf-8">
