--- a/examples/Lecture41/index.html
+++ b/examples/Lecture41/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html ng-app='ShoppingList'>
+<html ng-app='MenuApp'>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <title>No Cookie Shopping List</title>
+    <title>Assignment4</title>
   </head>
   <body>
-    <h1>Welcome to Premade No Cookie Shopping List</h1>
+    <h1>Welcome to the Restaurant</h1>
 
     <ui-view></ui-view>
 
@@ -28,7 +28,7 @@
     <script src="src/shoppinglist/main-shoppinglist.controller.js"></script>
     <script src="src/shoppinglist/shoppinglist.service.js"></script>
     <script src="src/shoppinglist/item-detail.controller.js"></script>
-
+    <script src="src/shoppinglist/itemsComponent.js"></script>
     <!-- 'Spinner' module artifacts -->
     <script src="src/spinner/loadingspinner.component.js"></script>
 
