--- a/examples/Lecture41/index.html
+++ b/examples/Lecture41/index.html
@@ -6,7 +6,7 @@
     <title>No Cookie Shopping List</title>
   </head>
   <body>
-    <h1>Welcome to the Restaurant/h1>
+    <h1>Welcome to the Restaurant</h1>
 
     <ui-view></ui-view>
 
