--- a/examples/Lecture41/index.html
+++ b/examples/Lecture41/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='MenuApp'>
+<html ng-app='ShoppingList'>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
