--- a/solutions/assignment4-solution/index.html
+++ b/solutions/assignment4-solution/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
-<html  ng-app='MenuApp'>
-<head>
-	<title>Assignment4</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
-</head>
-<body>
-<h1>Welcome to the Restaurant</h1>
-<ui-view></ui-view>
-<script src='lib/angular.min.js' type="text/javascript"></script>
-<script src='lib/angular-ui-router.min.js' type="text/javascript"></script>
-<script src='src/MenuList/MenuModule.js' type="text/javascript"></script>
-<script src='router.js' type="text/javascript"></script>
-<script src='src/MenuList/CategoriesController.js' type="text/javascript"></script>
-<script src='src/MenuList/categoriesComponent.js' type="text/javascript"></script>
-<script src='src/MenuList/singleCategoryController.js' type="text/javascript"></script>
-<script src='src/MenuList/itemsComponent.js' type="text/javascript"></script>
-<script src='src/MenuList/MenuService.js' type="text/javascript"></script>
-</body>
+<html ng-app='ShoppingList'>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>No Cookie Shopping List</title>
+  </head>
+  <body>
+    <h1>Welcome to the Restaurant</h1>
+
+    <ui-view></ui-view>
+
+    <loading-spinner></loading-spinner>
+
+    <!-- Libraries -->
+    <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-ui-router.min.js"></script>
+
+    <!-- Modules -->
+    <script src="src/shoppinglist/shoppinglist.module.js"></script>
+    <script src="src/spinner/spinner.module.js"></script>
+
+    <!-- Routes -->
+    <script src="src/routes.js"></script>
+
+    <!-- 'ShoppingList' module artifacts -->
+    <script src="src/shoppinglist/shoppinglist.component.js"></script>
+    <script src="src/shoppinglist/main-shoppinglist.controller.js"></script>
+    <script src="src/shoppinglist/shoppinglist.service.js"></script>
+    <script src="src/shoppinglist/item-detail.controller.js"></script>
+    <script src='src/shoppinglist/itemsComponent.js'></script>
+    <!-- 'Spinner' module artifacts -->
+    <script src="src/spinner/loadingspinner.component.js"></script>
+
+  </body>
 </html>
