--- a/examples/Lecture59/index.html
+++ b/examples/Lecture59/index.html
@@ -51,12 +51,12 @@
                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
               </li>
               <li>
-                <a href="#">
-                  <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+                <a ui-sref='myInfo'>
+                  <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">My Info</a>
               </li>
               <li>
-                <a href="#">
-                  <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+                <a ui-sref='signUp'>
+                  <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Sign-Up</a>
               </li>
               <li id="phone" class="hidden-xs">
                 <a href="tel:410-602-5008">
@@ -77,9 +77,9 @@
     <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
     <ui-view>
-      <div class="text-center initial-loading">
+      <!-- <div class="text-center initial-loading">
         <h2>Loading Site...</h2>
-      </div>
+      </div> -->
     </ui-view>
 
     <footer class="panel-footer">
