--- a/examples/Lecture59/src/public/user/signUp.html
+++ b/examples/Lecture59/src/public/user/signUp.html
@@ -1,5 +1,6 @@
-<fieldset>
-  <legend>Sign Up Page</legend>
+
+  <fieldset>
+  <legend color='green'>Sign Up Page</legend>
   <form name="regForm" novalidate>
     <input type="text" name="firstName" placeholder="enter your first name"
     ng-model=signUpCtrl.user.firstname
@@ -48,3 +49,4 @@
 </fieldset>
 
 <div ng-if="!signUpCtrl.invalid">your Info is saved Sucessfully!!!</div>
+
