--- a/examples/Lecture42/index.html
+++ b/examples/Lecture42/index.html
@@ -2,11 +2,12 @@
 <html ng-app='formValidationApp'>
 <head>
   <meta charset="utf-8">
+  <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>Form Validation App</title>
 </head>
 <body ng-controller='RegistrationController as reg'>
-<h1 class='text-center'>Simple Form Validation</h1>
+<h1 >Simple Form Validation</h1>
 <fieldset>
   <legend>Sign Up Page</legend>
   <form name="regForm" novalidate>
