--- a/examples/Lecture59/index.html
+++ b/examples/Lecture59/index.html
@@ -77,9 +77,9 @@
     <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
     <ui-view>
-      <!-- <div class="text-center initial-loading">
+      <div class="text-center initial-loading">
         <h2>Loading Site...</h2>
-      </div> -->
+      </div>
     </ui-view>
 
     <footer class="panel-footer">
