--- a/examples/Lecture59/src/public/menu-items/menu-items.html
+++ b/examples/Lecture59/src/public/menu-items/menu-items.html
@@ -7,7 +7,7 @@
   </div>
 
   <menu-item ng-repeat="menuItem in menuItemsCtrl.menuItems.menu_items"
-             menu-item="menuItem">
+             menuItem="menuItem">
   </menu-item>
 
 
