--- a/examples/Lecture59/src/public/user/signUp.html
+++ b/examples/Lecture59/src/public/user/signUp.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" type="text/css" href="css/signUp.css">
   <fieldset>
   <legend color='green'>Sign Up Page</legend>
   <form name="regForm" novalidate>
