--- a/examples/Lecture59/src/public/user/user-info.html
+++ b/examples/Lecture59/src/public/user/user-info.html
@@ -12,7 +12,7 @@
 		</h3>
 		<img src="images/menu/{{userInfoCtrl.user.favourite.short_name}}/{{userInfoCtrl.user.favourite.short_name}}.jpg" 
 		alt="loading">
-		{{userInfo.user.favourite.special_instructions}}
+		{{userInfoCtrl.user.favourite.special_instructions}}
 	</div>
 </fieldset>
 </div>
