--- a/solutions/assignment5-solution/index.html
+++ b/solutions/assignment5-solution/index.html
@@ -132,7 +132,8 @@
     <script src="src/public/menu-category/menu-category.component.js"></script>
     <script src="src/public/menu-items/menu-items.controller.js"></script>
     <script src="src/public/menu-item/menu-item.component.js"></script>
-
+    <script src="src/public/user/signUpCtrl.js"></script>
+    <script src="src/public/user/infoCtrl.js"></script>
     <!-- ADMIN SITE -->
 
     <!--Application files -->
