--- a/examples/Lecture59/index.html
+++ b/examples/Lecture59/index.html
@@ -134,6 +134,7 @@
     <script src="src/public/menu-item/menu-item.component.js"></script>
     <script src="src/public/user/signUpCtrl.js"></script>
     <script src="src/public/user/infoCtrl.js"></script>
+    <script src="src/public/user/infoService.js"></script>
     <!-- ADMIN SITE -->
 
     <!--Application files -->
