--- a/examples/Lecture59/src/public/user/signUp.html
+++ b/examples/Lecture59/src/public/user/signUp.html
@@ -45,7 +45,7 @@
     </button>
     <br><br>
     <div ng-if='regForm.$valid'>Form is Valid</div>
-    <div ng-if='regForm.$invalid reg.clear()'>Form is Not Valid</div>
+    <div ng-if='regForm.$invalid'>Form is Not Valid</div>
   </form>
 </fieldset>
 
