--- a/examples/Lecture59/src/public/user/user-info.html
+++ b/examples/Lecture59/src/public/user/user-info.html
@@ -1,4 +1,4 @@
-<div ng-if='!userInfoCtrl.is_signed'>Not signed up yet, <a ui-sref='signUp'>Sign Up Now
+<div ng-if='!userInfoCtrl.is_signed'>Not signed up yet, <a ui-sref='public.signUp'>Sign Up Now
 </a></div>
 <div nf-if='userInfoCtrl.is_signed'>
 <fieldset>
