--- a/examples/Lecture59/src/public/user/user-info.html
+++ b/examples/Lecture59/src/public/user/user-info.html
@@ -1,6 +1,6 @@
 <div ng-if='!userInfoCtrl.is_signed'>Not signed up yet, <a ui-sref='public.signUp'>Sign Up Now
 </a></div>
-<div nf-if='userInfoCtrl.is_signed'>
+<div ng-if='userInfoCtrl.is_signed'>
 <fieldset>
 	<legend>User Info</legend>
 	<div>
