--- a/examples/Lecture59/src/public/user/signUp.html
+++ b/examples/Lecture59/src/public/user/signUp.html
@@ -44,10 +44,10 @@
       Submit
     </button>
     <br><br>
-    <div ng-if='regForm.$valid'>Form is Valid</div>
-    <div ng-if='regForm.$invalid'>Form is Not Valid</div>
+    <div ng-if='regForm.$valid' id='valid'>Form is Valid</div>
+    <div ng-if='regForm.$invalid' id='invalid'>Form is Not Valid</div>
   </form>
 </fieldset>
 
-<div ng-if="!signUpCtrl.invalid">your Info is saved Sucessfully!!!</div>
+<!-- <div ng-if="!signUpCtrl.invalid">your Info is saved Sucessfully!!!</div> -->
 
