--- a/examples/Lecture59/src/public/menu-items/menu-items.html
+++ b/examples/Lecture59/src/public/menu-items/menu-items.html
@@ -6,7 +6,7 @@
     {{ menuItemsCtrl.menuItems.category.special_instructions}}
   </div>
 
-  <menu-item ng-repeat="menuItem in menuItemsCtrl.menuItems.menu_items"
+  <menu-item ng-repeat="menuItem in menuItemsCtrl.menuItems"
              menuItem="menuItem">
   </menu-item>
 
