--- a/solutions/assignment5-solution/src/public/user/user-info.html
+++ b/solutions/assignment5-solution/src/public/user/user-info.html
@@ -11,7 +11,7 @@
 		Mobile No: {{userInfoCtrl.user.mobile}}<br>
 		<h3 text-align='center'>Favourite Dish - {{userInfoCtrl.user.favourite.name}}
 		</h3>
-		<img src="images/menu/{{userInfoCtrl.user.favourite.short_name}}/{{userInfoCtrl.user.favourite.short_name}}.jpg" 
+		<img src="items/{{userInfoCtrl.user.favourite.short_name}}.jpg" 
 		alt="loading">
 		{{userInfoCtrl.user.favourite.special_instructions}}
 	</div>
