--- a/solutions/assignment5-solution/src/public/user/signUp.html
+++ b/solutions/assignment5-solution/src/public/user/signUp.html
@@ -35,7 +35,7 @@
     </span>
     <br>
     <input type="text" name="favourite" placeholder="Enter your Favourite dish category short_name" ng-model='signUpCtrl.user.favourite' minlength="1" required>
-    <span ng-if='(regForm.favourite.$error.minlength || regForm.favourite.$error.required) && regForm.favourite.$touched'>Choose your favourite dish category with correct Label as 'L','SP','DK','NL',etc
+    <span ng-if='(regForm.favourite.$error.minlength || regForm.favourite.$error.required) && regForm.favourite.$touched'>Choose your favourite dish item with correct Label 
     </span>
     <br>
     <button
