--- a/solutions/assignment5-solution/src/public/menu-items/menu-items.html
+++ b/solutions/assignment5-solution/src/public/menu-items/menu-items.html
@@ -5,9 +5,8 @@
   <div class="text-center">
     {{ menuItemsCtrl.special_instructions}}
   </div>
-
   <menu-item ng-repeat="menuItem in menuItemsCtrl.menuItems"
-             menuItem="menuItem" short_name=menuItemsCtrl.short_name>
+             menuItem="menuItem">
   </menu-item>
 
 
