--- a/solutions/assignment5-solution/src/public/menu-items/menu-items.html
+++ b/solutions/assignment5-solution/src/public/menu-items/menu-items.html
@@ -7,6 +7,6 @@
   </div>
 
   <menu-item ng-repeat="menuItem in menuItemsCtrl.menuItems.menu_items"
-             menuItem="menuItem" >
+             menu-item="menuItem" >
   </menu-item>
 </div>
